<resources>
    <string name="app_name">My Application</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmento_a">Fragment A</string>
    <string name="fragmento_b">Fragment B</string>
    <string name="fragmento_c">Fragment C</string>
    <string name="logout">Logout</string>
    <string name="default_web_client_id" translatable="false">AIzaSyDWK7beKLQT_7xELadwUKiPNaLNYfcLSxI</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_login">Back to Login</string>
    <string name="success_comeback_to_login_view">Success! Comeback to Login View</string>
</resources>